// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Button should render button with left icon 1`] = `
<button
  className="creasy-button creasy-button--undefined creasy-button--color-default creasy-button--size-auto"
>
  <span
    className="creasy-button__icon creasy-button__icon--left"
  >
    <span>
      icon
    </span>
  </span>
  <span>
    Button
  </span>
</button>
`;

exports[`Button should render button with right icon 1`] = `
<button
  className="creasy-button creasy-button--undefined creasy-button--color-default creasy-button--size-auto creasy-button--reversed"
>
  <span
    className="creasy-button__icon creasy-button__icon--right"
  >
    <span>
      icon
    </span>
  </span>
  <span>
    Button
  </span>
</button>
`;

exports[`Button should render default button 1`] = `
<button
  className="creasy-button creasy-button--undefined creasy-button--color-default creasy-button--size-auto"
>
  <span>
    Button
  </span>
</button>
`;

exports[`Button should render disabled button 1`] = `
<button
  className="creasy-button creasy-button--undefined creasy-button--color-default creasy-button--size-auto creasy-button--disabled"
  disabled={true}
>
  <span>
    Button
  </span>
</button>
`;

exports[`Button should render link button 1`] = `
<button
  className="creasy-button creasy-button--text creasy-button--color-default creasy-button--size-auto"
>
  <span>
    Button
  </span>
</button>
`;

exports[`Button should render outlined button 1`] = `
<button
  className="creasy-button creasy-button--outlined creasy-button--color-default creasy-button--size-auto"
>
  <span>
    Button
  </span>
</button>
`;

exports[`Button should render primary color button 1`] = `
<button
  className="creasy-button creasy-button--undefined creasy-button--color-primary creasy-button--size-auto"
>
  <span>
    Button
  </span>
</button>
`;

exports[`Button should render secondary color button 1`] = `
<button
  className="creasy-button creasy-button--undefined creasy-button--color-secondary creasy-button--size-auto"
>
  <span>
    Button
  </span>
</button>
`;

exports[`Button should render text button 1`] = `
<button
  className="creasy-button creasy-button--text creasy-button--color-default creasy-button--size-auto"
>
  <span>
    Button
  </span>
</button>
`;
